# HoloWhosLive

./: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  sql_app.db
client/: Dockerfile  package-lock.json  package.json  vue.config.js
holowhoslive/: main.py
server/: .dockerignore  Dockerfile  aerich.ini  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 25985aa5fdda_.py  25985aa5fdda_add_yt_channels.py  5f4ac346f618_add_groups.py  9a60dd025a69_yt_channels_and_groups.py  f4057f6212a0_.py  f8bf574d07bc_initial_tables.py
server/holowhoslive/: config.py  main.py  models.py  schemas.py
server/holowhoslive/actions/: channels.py
server/holowhoslive/api/: __init__.py  _channels_router.py  _group_router.py  _twitch_channels_router.py  _yt_channels_router.py  channels.py  users.py
server/holowhoslive/dependencies/: __init__.py  _database.py  _redis.py  _youtube.py  database.py  redis.py  youtube.py
server/holowhoslive/models/: __init__.py  _group.py  _yt_channel.py  channel.py  user.py
server/holowhoslive/routers/: youtube.py
server/holowhoslive/schemas/: __init__.py  _group_schemas.py  _yt_channel_schemas.py  channel.py  user.py
server/holowhoslive/services/: __init__.py  _channel_service.py  _groups_service.py  _twitch_service.py  _youtube_service.py
server/migrations/models/: 0_20210923232432_init.sql  0_20211023211702_init.sql  1_20210924015332_twitch_channel.sql
server/tools/: channels.json  seeding.py
server/tools/data/: channels.json  groups.json  yt_channels.json
tools/: all_live.json  all_offline.json  channels.json  seeding.py  some_live.json
(+36 files in other folders)
