[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["MrTj458"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
google-api-python-client = "^2.22.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
httpx = "^0.19.0"
alembic = "^1.7.3"
aioredis = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
